(add): add logic ebay

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-MONGO_URL = mongodb+srv://huavanduy1106:duycooki1@cluster0.mguxr.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGO_URL = mongodb://127.0.0.1:27017/penda
 JWT_SECRET = duy
 
 
