--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^5.12.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
     "uuid": "^8.3.2"
   }
 }
