--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT = 4000
-MONGO_URL = mongodb://127.0.0.1:27017/penda
+MONGO_USER = mongodb://pendavn:
+MONGO_PASSWORD = qWE2kA@a43dp!c
+MONGO_HOST = 127.0.0.1:27017/penda
 JWT_SECRET = duy
-
-
-
