--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "cron": "^2.2.0",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
