--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.7",
     "path": "^0.12.7",
+    "request-ip": "^3.3.0",
     "uuid": "^8.3.2"
   }
 }
