--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "cron": "^2.2.0",
     "crypto": "^1.0.1",
